# CMPT485Project

./: .gitignore  CMakeLists.txt  D_Object.cpp  D_Object.hpp  Shader.cpp  Shader.hpp  convenience.cpp  convenience.hpp  display.cpp  display.hpp  main.cpp  ogl.cpp  ogl.hpp  test.cpp
resources/heating_plant/: heating_plant.models
resources/shaders/: Depth.fs  Depth.vs  PSshader.fs  PSshader.vs  shader.fs  shader.vs  shadow.fs  shadow.vs  textShader.fs  textShader.vs
